# ftpServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: VersionResource.rc  qt6.cmake
src/: dataconnection.cpp  dataconnection.h  ftpcommand.cpp  ftpcommand.h  ftpcontrolconnection.cpp  ftpcontrolconnection.h  ftplistcommand.cpp  ftplistcommand.h  ftpretrcommand.cpp  ftpretrcommand.h  ftpserver.cpp  ftpserver.h  ftpstorcommand.cpp  ftpstorcommand.h  main.cpp  qtservice.cpp  qtservice.h  qtservice_win.cpp  sslserver.cpp  sslserver.h
